<resources>
    <string name="app_name">Studiosity</string>
    <string name="action_settings">Settings</string>
    <string name="content_authority">com.fluidminds.android.studiosity</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="select_color">Select a Color</string>
    <string name="required">Required</string>
    <string name="duplicate_name">Duplicate Name</string>
    <string name="action_edit">Edit</string>
    <string name="alert_delete_title">Delete</string>
    <string name="date">Date</string>
    <string name="google_app_id">studiosity-1299</string>

    <!-- Subjects -->
    <string name="subjects">Subjects</string>
    <string name="no_subjects">No Subjects</string>
    <string name="subject_name">Subject Name</string>
    <string name="subject">Subject</string>
    <string name="theme_color">Theme Color</string>
    <string name="delete_subject">Delete subject \'%s\'?</string>
    <string name="action_delete_subject">Delete Subject</string>
    <string name="action_delete_sample_data">Delete Sample Data</string>
    <string name="delete_sample_data">Delete all sample data?</string>
    <string name="intro_subjects">Create your own class subjects</string>

    <!-- Decks -->
    <string name="no_decks">No Deck of Cards</string>
    <string name="deck_name">Deck Name</string>
    <string name="deck">Deck</string>
    <string name="decks">Decks</string>
    <string name="delete_deck">Delete deck \'%s\'?</string>
    <string name="action_delete_deck">Delete Deck</string>
    <string name="study">Study</string>
    <string name="quiz">Quiz</string>
    <string name="stats">Stats</string>
    <string name="intro_decks">Organize your flash cards into card decks</string>

    <!-- Cards -->
    <string name="flashcards">Flash Cards</string>
    <string name="no_cards">No Cards</string>
    <string name="delete_card">Delete card \'%s\'?</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="letter_q">Q:</string>
    <string name="letter_a">A:</string>
    <string name="action_delete_card">Delete Card</string>
    <string name="intro_cards">Create your own flash cards</string>

    <!-- Study -->
    <string name="intro_study">Quickly view an entire deck of flash cards</string>

    <!-- Stats -->
    <string name="trends">Trends</string>
    <string name="scores">Scores</string>
    <string name="no_quizzes">No Quizzes</string>
    <string name="average">Average</string>
    <string name="score">Score</string>
    <string name="accuracy">Accuracy</string>
    <string name="percentage_symbol">%</string>
    <string name="forward_slash">/</string>
    <string name="last">Last</string>
    <string name="five">5</string>
    <string name="quiz_accuracy">Quiz Accuracy</string>
    <string name="intro_stats">Keep track of your progress</string>

    <!-- Quiz -->
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="card_count" formatted="false">%d / %d</string>
    <string name="card_count_spacer" formatted="false">%d%d</string>
    <string name="results">Results</string>
    <string name="last_quiz_info" formatted="false">%s\u0020\u0020•\u0020\u0020%s%%</string>
    <string name="intro_quiz">Quiz yourself on what you have learned</string>

    <!-- Google Drive -->
    <string name="title_activity_backup">Studiosity Back Up</string>
    <string name="action_backup_data">Studiosity Back Up</string>
    <string name="backup_introduction">Back up your Studiosity data to Google Drive so if you lose your device or switch to a new one, your data is safe.</string>
    <string name="last_backup">Last Backup</string>
    <string name="size">Size</string>
    <string name="account">Account</string>
    <string name="sign_in">Sign In</string>
    <string name="backup_now">Back Up Now</string>
    <string name="cloud_error">Studiosity could not back up due to an unknown Google Drive error.</string>
    <string name="backup_file_name">StudiosityBackup_%s.json</string>

</resources>
