<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.StatsTabActivity"
    android:background="@color/background_grey200">

    <LinearLayout
        android:id="@+id/linearLastFiveQuizzesMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_grey200"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="sans-serif"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"
            android:text="@string/last"
            android:textAllCaps="true"
            android:textSize="10sp"
            android:textColor="@color/textColorPrimary"
            android:textIsSelectable="false"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="sans-serif-light"
            android:text="@string/five"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/textColorPrimary"
            android:textIsSelectable="false"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="sans-serif"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:text="@string/quiz_accuracy"
            android:textAllCaps="true"
            android:textSize="10sp"
            android:textColor="@color/textColorPrimary"
            android:textIsSelectable="false"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerCards"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/textNoRecords"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/no_quizzes"
        android:visibility="gone"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@android:color/white"/>

</LinearLayout>
