<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_grey200"
    android:paddingLeft="@dimen/card_layout_padding"
    android:paddingStart="@dimen/card_layout_padding"
    android:paddingRight="@dimen/card_layout_padding"
    android:paddingEnd="@dimen/card_layout_padding"
    android:paddingTop="@dimen/card_layout_padding">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/card_radius"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:contentPadding="@dimen/card_padding"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingRight="@dimen/word_spacer"
                    android:paddingEnd="@dimen/word_spacer"
                    android:text="@string/letter_q"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/textColorSecondary" />
                <TextView
                    android:id="@+id/textQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theme_color"
                    android:fontFamily="sans-serif"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/textColorPrimary"
                    android:maxLines="1"
                    android:ellipsize="end" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingRight="@dimen/word_spacer"
                    android:paddingEnd="@dimen/word_spacer"
                    android:text="@string/letter_a"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/textColorSecondary" />
                <TextView
                    android:id="@+id/textAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theme_color"
                    android:fontFamily="sans-serif-light"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/textColorSecondary"
                    android:maxLines="1"
                    android:ellipsize="end" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>